--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -3,16 +3,15 @@
     TODO: Before you run your application, you need a Google Maps API key.
 
     To get one, follow this link, follow the directions and press "Create" at the end:
-
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=E7:EA:E9:59:88:31:A5:C5:15:95:87:A3:67:12:39:77:1E:BA:CD:BE%3Bcom.choirulhuda.belajarlbs
+    LINK_CONSOLE_GOOGLE_DEVELOPER
 
     You can also add your credentials to an existing key, using these values:
 
     Package name:
-    com.choirulhuda.belajarlbs
+    PACKAGE_NAME
 
     SHA-1 certificate fingerprint:
-    E7:EA:E9:59:88:31:A5:C5:15:95:87:A3:67:12:39:77:1E:BA:CD:BE
+    SHA_KEY_CERTIFICATE
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -20,5 +19,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCoiK44Rnm-f6yf1jCel71eqSCjFfK6S0o</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">API_KEY</string>
 </resources>
